[package]
name = "nanospinner"
version = "0.1.2"
edition = "2021"
description = "A minimal, zero-dependency terminal spinner for Rust CLI applications"
license = "MIT"
repository = "https://github.com/anthonysgro/nanospinner"
keywords = ["spinner", "terminal", "cli", "progress", "tui"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]

[dev-dependencies]
proptest = "1"
